--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,10 +14,12 @@ Depends:
 	R (>= 4.1.0)
 Imports:
     CirceR,
+    CohortGenerator,
     dplyr,
     lifecycle,
     rlang,
-    SqlRender
+    SqlRender,
+    stringr
 Suggests:
   Eunomia,
   remotes,
@@ -27,7 +29,7 @@ Suggests:
 	testthat,
 	withr
 Remotes:
-  ohdsi/CirceR
+  CirceR
 License: Apache License
 RoxygenNote: 7.3.1
 VignetteBuilder: knitr
